Finished Assets Management but still gold

--- a/src/main/resources/fxml/crypto.fxml
+++ b/src/main/resources/fxml/crypto.fxml
@@ -14,13 +14,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.CryptoController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.CryptoController">
     <top>
         <VBox BorderPane.alignment="CENTER">
             <children>
-                <Label text="Assets Management (Cryptocurrency)">
+                <Label text="Cryptocurrency">
                     <font>
-                        <Font size="20.0" />
+                        <Font name="System Bold" size="20.0" />
                     </font>
                     <VBox.margin>
                         <Insets bottom="10.0" left="30.0" top="15.0" />
@@ -29,15 +29,18 @@
                 <HBox alignment="CENTER_LEFT">
                     <children>
                         <fx:define>
-                            <ToggleGroup fx:id="assetTypeGroup" />
+                            <ToggleGroup fx:id="$assetTypeGroup" />
                         </fx:define>
-                        <RadioButton fx:id="radio_gold" mnemonicParsing="false" text="Gold" toggleGroup="$assetTypeGroup">
+                        <RadioButton fx:id="radio_gold" mnemonicParsing="false" text="Gold">
                             <HBox.margin>
                                 <Insets bottom="8.0" left="30.0" right="15.0" top="8.0" />
                             </HBox.margin>
                             <font>
                                 <Font size="14.0" />
                             </font>
+                     <toggleGroup>
+                        <ToggleGroup fx:id="assetTypeGroup" />
+                     </toggleGroup>
                         </RadioButton>
                         <RadioButton fx:id="radio_crypto" mnemonicParsing="false" selected="true" text="Cryptocurrency" toggleGroup="$assetTypeGroup">
                             <HBox.margin>
@@ -55,7 +58,7 @@
                                 <Font size="14.0" />
                             </font>
                         </RadioButton>
-                        <RadioButton fx:id="radio_Stock" mnemonicParsing="false" text="Stock" toggleGroup="$assetTypeGroup">
+                        <RadioButton fx:id="radio_Stock" mnemonicParsing="false" text="Stocks" toggleGroup="$assetTypeGroup">
                             <HBox.margin>
                                 <Insets bottom="8.0" right="15.0" top="8.0" />
                             </HBox.margin>
@@ -72,7 +75,7 @@
                                 <Font size="14.0" />
                             </font>
                         </Text>
-                        <Button fx:id="btn_back" mnemonicParsing="false" onAction="#handleBack" text="Back to Main">
+                        <Button fx:id="btn_back" mnemonicParsing="false" onAction="#handleBack" text="Return to Dashborad">
                             <HBox.margin>
                                 <Insets bottom="8.0" right="30.0" top="8.0" />
                             </HBox.margin>
@@ -86,7 +89,7 @@
         </VBox>
     </top>
     <center>
-        <TableView fx:id="cryptoTable" VBox.vgrow="ALWAYS" BorderPane.alignment="CENTER">
+        <TableView fx:id="cryptoTable" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS">
             <columns>
                 <TableColumn fx:id="idColumn" prefWidth="80.0" text="ID" />
                 <TableColumn fx:id="nameColumn" prefWidth="120.0" text="Name" />
@@ -111,6 +114,36 @@
                         <Font size="14.0" />
                     </font>
                 </Button>
+                <Region HBox.hgrow="ALWAYS" />
+                <Label text="Net Worth:">
+                    <font>
+                        <Font size="14.0" />
+                    </font>
+                    <HBox.margin>
+                        <Insets right="5.0" />
+                    </HBox.margin>
+                </Label>
+                <Label fx:id="netWorthLabel" text="\$0.00">
+                    <font>
+                        <Font name="System Bold" size="14.0" />
+                    </font>
+                    <HBox.margin>
+                        <Insets right="20.0" />
+                    </HBox.margin>
+                </Label>
+                <Label text="Total Invested:">
+                    <font>
+                        <Font size="14.0" />
+                    </font>
+                    <HBox.margin>
+                        <Insets right="5.0" />
+                    </HBox.margin>
+                </Label>
+                <Label fx:id="totalInvestedLabel" text="\$0.00">
+                    <font>
+                        <Font name="System Bold" size="14.0" />
+                    </font>
+                </Label>
             </children>
             <padding>
                 <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
