--- a/src/main/resources/fxml/dashboard.fxml
+++ b/src/main/resources/fxml/dashboard.fxml
@@ -11,28 +11,25 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.DashboardController">
    <children>
-      <StackPane prefHeight="400.0" prefWidth="600.0">
+      <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label fx:id="welcomeMsg_label" alignment="CENTER" prefHeight="86.0" prefWidth="357.0" text="Welcome, Dummy!" StackPane.alignment="TOP_CENTER">
                <font>
                   <Font size="36.0" />
                </font>
             </Label>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="15.0" StackPane.alignment="BOTTOM_CENTER">
+            <VBox alignment="CENTER" spacing="15.0" StackPane.alignment="BOTTOM_CENTER">
                <children>
                   <Label text="Main Menu">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button fx:id="assetsInvestments_btn" mnemonicParsing="false" onAction="#switchToAssetsInvestments" text="Assets and Investments ">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
+                  <Button fx:id="assetsInvestments_btn" mnemonicParsing="false" onAction="#switchToAssetsInvestments" prefWidth="200.0" text="Assets and Investments ">
                   </Button>
-                  <Button fx:id="zakatComp_btn" mnemonicParsing="false" onAction="#switchToZakatAndCompliance" prefHeight="26.0" prefWidth="143.0" text="Zakat and Compliance" />
-                  <Button fx:id="reports_btn" mnemonicParsing="false" prefHeight="26.0" prefWidth="143.0" text="Reports" />
-                  <Button fx:id="logout_btn" mnemonicParsing="false" onAction="#handleLogOutClick" text="Log out" textFill="RED">
+                  <Button fx:id="zakatComp_btn" mnemonicParsing="false" onAction="#switchToZakatAndCompliance" prefWidth="200.0" text="Zakat and Compliance" />
+                  <Button fx:id="reports_btn" mnemonicParsing="false" prefWidth="200.0" text="Reports" />
+                  <Button fx:id="logout_btn" mnemonicParsing="false" onAction="#handleLogOutClick" prefWidth="200.0" text="Log out" textFill="RED">
                      <VBox.margin>
                         <Insets top="20.0" />
                      </VBox.margin>
