--- a/src/main/resources/fxml/zakat_and_compliance.fxml
+++ b/src/main/resources/fxml/zakat_and_compliance.fxml
@@ -23,7 +23,7 @@
       <Label text="Silver" AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="228.0" />
       <Label text="Currency" AnchorPane.leftAnchor="109.0" AnchorPane.topAnchor="118.0" />
       <Button fx:id="calculate_btn" mnemonicParsing="false" text="Calculate" AnchorPane.leftAnchor="101.0" AnchorPane.topAnchor="282.0" />
-      <Button fx:id="selectAssets_box" mnemonicParsing="false" text="Select Assets" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="207.0" />
+      <Button fx:id="selectAssets_box" onAction="#handleSelectAssetsButton" mnemonicParsing="false" text="Select Assets" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="207.0" />
       <Label fx:id="curr_per_gram_label" text="-/ gram" AnchorPane.topAnchor="154.0" AnchorPane.rightAnchor="55.0" />
       <Label fx:id="curr_per_silver" text="-/ gram" AnchorPane.topAnchor="228.0" AnchorPane.rightAnchor="55.0" />
       <Label fx:id="assetsSelected_label" text="0 assets selected" AnchorPane.leftAnchor="88.0" AnchorPane.topAnchor="240.0" />
