--- a/src/main/resources/fxml/zakat_and_compliance.fxml
+++ b/src/main/resources/fxml/zakat_and_compliance.fxml
@@ -1,31 +1,170 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.Priority?>
+<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Pos?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.ZakatAndComplianceController">
-   <children>
-      <Hyperlink fx:id="dashboard_btn" onAction="#switchToDashboard" text="Return to Dashboard" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
-      <Label text="Zakat and Compliance Calculator" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="53.0">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="currency_combobox" prefWidth="150.0" promptText="EGP" AnchorPane.leftAnchor="58.0" AnchorPane.topAnchor="136.0" />
-      <TextField fx:id="gold_field" AnchorPane.leftAnchor="333.0" AnchorPane.topAnchor="150.0" AnchorPane.rightAnchor="120.0" />
-      <TextField fx:id="silver_field" AnchorPane.leftAnchor="335.0" AnchorPane.topAnchor="224.0" AnchorPane.rightAnchor="120.0" />
-      <Label text="Gold" AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="154.0" />
-      <Label text="Silver" AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="228.0" />
-      <Label text="Currency" AnchorPane.leftAnchor="109.0" AnchorPane.topAnchor="118.0" />
-      <Button fx:id="calculate_btn" mnemonicParsing="false" text="Calculate" AnchorPane.leftAnchor="101.0" AnchorPane.topAnchor="282.0" />
-      <Button fx:id="selectAssets_box" onAction="#handleSelectAssetsButton" mnemonicParsing="false" text="Select Assets" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="207.0" />
-      <Label fx:id="curr_per_gram_label" text="-/ gram" AnchorPane.topAnchor="154.0" AnchorPane.rightAnchor="55.0" />
-      <Label fx:id="curr_per_silver" text="-/ gram" AnchorPane.topAnchor="228.0" AnchorPane.rightAnchor="55.0" />
-      <Label fx:id="assetsSelected_label" text="0 assets selected" AnchorPane.leftAnchor="88.0" AnchorPane.topAnchor="240.0" />
-   </children>
+<AnchorPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.ZakatAndComplianceController">
+    <children>
+        <StackPane AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+            <children>
+                <VBox spacing="20" fillWidth="true">
+                    <padding>
+                        <Insets top="20" right="30" bottom="30" left="30" />
+                    </padding>
+                    <children>
+                        <!-- Navigation Bar -->
+                        <HBox alignment="CENTER_LEFT" spacing="10">
+                            <children>
+                                <Hyperlink fx:id="dashboard_btn" onAction="#switchToDashboard" text="Return to Dashboard" styleClass="navigation-link" />
+                            </children>
+                        </HBox>
+
+                        <!-- Main Title -->
+                        <Label text="Zakat and Compliance Calculator" textAlignment="CENTER" alignment="CENTER" maxWidth="Infinity">
+                            <font>
+                                <Font name="System Bold" size="24.0" />
+                            </font>
+                        </Label>
+
+                        <!-- Main Content -->
+                        <GridPane hgap="20" vgap="15" alignment="CENTER">
+                            <columnConstraints>
+                                <ColumnConstraints percentWidth="25" halignment="RIGHT" />
+                                <ColumnConstraints percentWidth="30" halignment="LEFT" />
+                                <ColumnConstraints percentWidth="20" halignment="RIGHT" />
+                                <ColumnConstraints percentWidth="25" halignment="LEFT" />
+                            </columnConstraints>
+
+                            <!-- Currency Selection -->
+                            <Label text="Currency" styleClass="form-label" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+                            <ComboBox fx:id="currency_combobox" promptText="EGP" maxWidth="Infinity" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+
+                            <!-- Gold Rate -->
+                            <Label text="Gold Rate" styleClass="form-label" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+                            <HBox spacing="10" alignment="CENTER_LEFT" GridPane.rowIndex="1" GridPane.columnIndex="1">
+                                <TextField fx:id="gold_field" editable="false" alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS" maxWidth="Infinity" />
+                            </HBox>
+                            <Label fx:id="curr_per_gram_label" text="-/ gram" GridPane.rowIndex="1" GridPane.columnIndex="2" />
+
+                            <!-- Silver Rate -->
+                            <Label text="Silver Rate" styleClass="form-label" GridPane.rowIndex="2" GridPane.columnIndex="0" />
+                            <HBox spacing="10" alignment="CENTER_LEFT" GridPane.rowIndex="2" GridPane.columnIndex="1">
+                                <TextField fx:id="silver_field" editable="false" alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS" maxWidth="Infinity" />
+                            </HBox>
+                            <Label fx:id="curr_per_silver" text="-/ gram" GridPane.rowIndex="2" GridPane.columnIndex="2" />
+
+                            <!-- Asset Selection -->
+                            <Label text="Asset Selection" styleClass="form-label" GridPane.rowIndex="3" GridPane.columnIndex="0" />
+                            <HBox spacing="15" alignment="CENTER_LEFT" GridPane.rowIndex="3" GridPane.columnIndex="1" GridPane.columnSpan="3">
+                                <Button fx:id="selectAssets_box" onAction="#handleSelectAssetsButton" mnemonicParsing="false" text="Select Assets" styleClass="action-button" />
+                                <Label fx:id="assetsSelected_label" text="0 assets selected" />
+                            </HBox>
+
+                            <!-- Calculate Button -->
+                            <HBox alignment="CENTER" GridPane.rowIndex="4" GridPane.columnIndex="0" GridPane.columnSpan="4">
+                                <Button fx:id="calculate_btn" mnemonicParsing="false" text="Calculate" styleClass="primary-button">
+                                    <font>
+                                        <Font name="System Bold" size="14.0" />
+                                    </font>
+                                    <padding>
+                                        <Insets top="10" right="30" bottom="10" left="30" />
+                                    </padding>
+                                </Button>
+                            </HBox>
+                        </GridPane>
+
+                        <!-- Separator -->
+                        <Separator />
+
+                        <!-- Compliance Section -->
+                        <TitledPane text="Compliance Information" expanded="false" animated="true" style="-fx-font-weight: bold;">
+                            <content>
+                                <VBox spacing="15">
+                                    <padding>
+                                        <Insets top="10" right="10" bottom="10" left="10" />
+                                    </padding>
+                                    <children>
+                                        <!-- Compliance Progress -->
+                                        <HBox spacing="10" alignment="CENTER_LEFT">
+                                            <Label text="Compliance Status:" />
+                                            <ProgressBar fx:id="complianceProgress" progress="0.0" prefWidth="200" />
+                                            <Label fx:id="compliancePercentage" text="0%" />
+                                        </HBox>
+
+                                        <!-- Compliance Checkboxes -->
+                                        <GridPane hgap="20" vgap="10">
+                                            <columnConstraints>
+                                                <ColumnConstraints percentWidth="50" />
+                                                <ColumnConstraints percentWidth="50" />
+                                            </columnConstraints>
+                                            <children>
+                                                <CheckBox fx:id="financialRecordsCheck" text="Financial Records Complete" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+                                                <CheckBox fx:id="assetVerificationCheck" text="Asset Verification Complete" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+                                                <CheckBox fx:id="taxFilingCheck" text="Tax Filing Status" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+                                                <CheckBox fx:id="zakatEligibilityCheck" text="Zakat Eligibility Confirmed" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+                                            </children>
+                                        </GridPane>
+
+                                        <!-- Compliance Notes -->
+                                        <VBox spacing="5">
+                                            <Label text="Notes" style="-fx-font-weight: bold;" />
+                                            <TextField fx:id="complianceNotes" promptText="Enter compliance notes here..." />
+                                        </VBox>
+                                    </children>
+                                </VBox>
+                            </content>
+                        </TitledPane>
+
+                        <!-- Results Section (Initially Hidden) -->
+                        <TitledPane fx:id="resultsPane" text="Calculation Results" expanded="false" visible="false" animated="true" style="-fx-font-weight: bold;">
+                            <content>
+                                <VBox spacing="10">
+                                    <padding>
+                                        <Insets top="10" right="10" bottom="10" left="10" />
+                                    </padding>
+                                    <children>
+                                        <GridPane hgap="20" vgap="10">
+                                            <columnConstraints>
+                                                <ColumnConstraints percentWidth="40" halignment="RIGHT" />
+                                                <ColumnConstraints percentWidth="60" halignment="LEFT" />
+                                            </columnConstraints>
+                                            <children>
+                                                <Label text="Total Assets Value:" GridPane.rowIndex="0" GridPane.columnIndex="0" style="-fx-font-weight: bold;" />
+                                                <Label fx:id="totalAssetsValue" text="0.00" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+
+                                                <Label text="Zakat Threshold (Nisab):" GridPane.rowIndex="1" GridPane.columnIndex="0" style="-fx-font-weight: bold;" />
+                                                <Label fx:id="zakatThreshold" text="0.00" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+
+                                                <Label text="Zakat Amount Due:" GridPane.rowIndex="2" GridPane.columnIndex="0" style="-fx-font-weight: bold;" />
+                                                <Label fx:id="zakatAmount" text="0.00" GridPane.rowIndex="2" GridPane.columnIndex="1" style="-fx-font-size: 14; -fx-font-weight: bold;" />
+                                            </children>
+                                        </GridPane>
+                                    </children>
+                                </VBox>
+                            </content>
+                        </TitledPane>
+                    </children>
+                </VBox>
+            </children>
+        </StackPane>
+    </children>
 </AnchorPane>
